Update minimal metadata and citation for 2025-07-17

--- a/citation.bib
+++ b/citation.bib
@@ -1,8 +1,9 @@
-@misc{angle,
+@software{angle,
   author       = {Porter, Matthew A.},
-  title        = {Qompass AI on Angle},
+  title        = {angle},
   year         = {2025},
-  note         = {Version 2025-05-01. Not yet indexed by Zenodo.},
-  howpublished = {\url{https://github.com/qompassai/angle}},
-  organization = {Qompass AI}
+  license      = {Q-CDA-1.0},
+  publisher    = {Zenodo},
+  version      = {e8e3baf},
+  url          = {https://github.com/qompassai/angle}
 }
